<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fakeShowId"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fakeShowIdHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/offlineLimit"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/offlineLimitHint"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/enableTipping" />

    <ToggleButton
        android:id="@+id/enableTipping"
        android:layout_width="292dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/fakeShowId" />

    <TextView
        android:id="@+id/emergencyOfflineCode"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offlineLimit" />

    <TextView
        android:id="@+id/generatedCodes"
        android:layout_width="366dp"
        android:layout_height="258dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencyOfflineCode"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/saveCode"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:text="@string/SAVE_BUTTON_TEXT"
        app:layout_constraintStart_toEndOf="@+id/emergencyOfflineCode"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copyCode"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="204dp"
        android:text="@string/COPY_BUTTON_TEXT"
        app:layout_constraintStart_toEndOf="@+id/saveCode"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearCodes"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="204dp"
        android:text="@string/CLEAR_BUTTON_TEXT"
        app:layout_constraintStart_toEndOf="@+id/copyCode"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generateCode"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="GENERATE"
        app:layout_constraintStart_toEndOf="@+id/offlineLimit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/FAKE_SHOW_ID_LABEL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/ENABLE_TIPPING_LABEL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/OFFLINE_LIMIT_LABEL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>